Pull request #272: MCA-2017 - change livechat widget language, add language menu to demo
Merge in MML/infobip-mobile-messaging-android from feature/MCA-1975-change_chat_language to master

Squashed commit of the following:

commit 6efb12a2b1566fa4070536f00d13a462251df334
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jun 14 16:08:29 2022 +0200

    MCA-2017 - expose propertyHelper.saveString, code clean up

commit 5909f77f5e1fdc36ec9b499f8a83fb6890549982
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jun 14 15:09:59 2022 +0200

    MCA-2017 - apply installation lang to native components

commit bdd7c020b83d5dbcd51cc2d918bbb82767387cc3
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jun 14 11:57:15 2022 +0200

    MCA-2017 - translations, chat fragment and attachment activity localisation

commit b70f814391fa8e4bd08d0b2c5b4e6b386c3426a4
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Wed Jun 8 14:41:20 2022 +0200

    MCA-2017 - change livechat widget language, add language menu to demo

--- a/infobip-mobile-messaging-android-demo/src/chat/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/menu/menu_main.xml
@@ -4,7 +4,129 @@
     tools:context=".ui.InboxActivity">
     <item
         android:id="@+id/action_id"
-        android:title="@string/action_registration_id_copy"
         android:icon="@drawable/ic_content_copy_white_24dp"
+        android:title="@string/action_registration_id_copy"
         app:showAsAction="always" />
+    <group android:id="@+id/languages">
+        <item
+            android:id="@+id/english"
+            android:enabled="true"
+            android:title="@string/english"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/turkish"
+            android:enabled="true"
+            android:title="@string/turkish"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/korean"
+            android:enabled="true"
+            android:title="@string/korean"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/russian"
+            android:enabled="true"
+            android:title="@string/russian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/chinese"
+            android:enabled="true"
+            android:title="@string/chinese"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/spanish"
+            android:enabled="true"
+            android:title="@string/spanish"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/portuguese"
+            android:enabled="true"
+            android:title="@string/portuguese"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/polish"
+            android:enabled="true"
+            android:title="@string/polish"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/romanian"
+            android:enabled="true"
+            android:title="@string/romanian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/arabic"
+            android:enabled="true"
+            android:title="@string/arabic"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/bosnian"
+            android:enabled="true"
+            android:title="@string/bosnian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/croatian"
+            android:enabled="true"
+            android:title="@string/croatian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/greek"
+            android:enabled="true"
+            android:title="@string/greek"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/swedish"
+            android:enabled="true"
+            android:title="@string/swedish"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/thai"
+            android:enabled="true"
+            android:title="@string/thai"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/lithuanian"
+            android:enabled="true"
+            android:title="@string/lithuanian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/danish"
+            android:enabled="true"
+            android:title="@string/danish"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/latvian"
+            android:enabled="true"
+            android:title="@string/latvian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/hungarian"
+            android:enabled="true"
+            android:title="@string/hungarian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/italian"
+            android:enabled="true"
+            android:title="@string/italian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/french"
+            android:enabled="true"
+            android:title="@string/french"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/slovenian"
+            android:enabled="true"
+            android:title="@string/slovenian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/ukrainian"
+            android:enabled="true"
+            android:title="@string/ukrainian"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/japanese"
+            android:enabled="true"
+            android:title="@string/japanese"
+            app:showAsAction="never" />
+    </group>
 </menu>
