Pull request #299: Jdzubak MCA-2337 livechat multithread
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2337-livechat-multithread to master

Squashed commit of the following:

commit 8c64e890427aeb1886518d922e515905701d471c
Merge: 41e097f3 18e467af
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Nov 16 13:54:01 2022 +0100

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-2337-livechat-multithread

    # Conflicts:
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/core/InAppChatClient.java
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/core/InAppChatClientImpl.java
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/view/InAppChatFragment.java

commit 41e097f3eb61a40bf9518c03dc285dbbef1f4740
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Nov 16 12:46:17 2022 +0100

    MCA-2376 Closed conversation handling

commit 16ea2d000b0604327a7fcbca511a2fd159aa3133
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Nov 4 07:55:09 2022 +0100

    MCA-2351 Input visibility logic updated

commit 0e23140e2b4f028ebf92deda882399b956406200
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Nov 3 16:00:24 2022 +0100

    MCA-2351 Multithread implementation

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
@@ -47,7 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:minHeight="40dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/ib_lc_iv_input_top_border"
