Pull request #308: Jdzubak MCA-2482 calls ui improvements
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2482_calls_ui_improvements to webrtcui-release-candidate

Squashed commit of the following:

commit f15bc6b8462d93e451fc4dba245c029dd09be387
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jan 4 09:13:26 2023 +0100

    MCA-2482 Review fixes

commit df66fdf0837163dcf150a007eca94f2c8956f731
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Dec 23 15:31:24 2022 +0100

    MCA-2504 Added support for rotations
    MCA-2515 Fixed mute state

commit 7feed582c4adf534d80b0d57d30aafc059742c02
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Dec 23 13:58:11 2022 +0100

    MCA-2503 Toggle UI controls for video calls

--- a/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
+++ b/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:id="@+id/background">
 
     <RelativeLayout
@@ -174,7 +175,7 @@
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="muteButton,videoButton,speakerButton,flipCamButton,screenShareButton"
         app:flow_horizontalStyle="spread"
-        app:flow_maxElementsWrap="3"
+        app:flow_maxElementsWrap="@integer/rtc_ui_in_call_fragment_buttons_flow_max_element_wrap"
         app:flow_verticalGap="36dp"
         app:flow_wrapMode="chain"
         app:layout_constraintEnd_toEndOf="parent"
@@ -387,14 +388,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="toolbarBackground,nameInVideo,nameDivider,elapsedTimeVideo,remoteVideoWrapper" />
+        app:constraint_referenced_ids="toolbarBackground,nameInVideo,nameDivider,elapsedTimeVideo" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/voiceGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:constraint_referenced_ids="nameInVoice,elapsedTimeVoice,avatar" />
+        app:constraint_referenced_ids="nameInVoice,avatar" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/localVideoBarrier"
