Pull request #316: MCA-2660 InAppChat setLanguage listener returns applied language now.
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2660-livechat-set-language to master

Squashed commit of the following:

commit a00bc0c34b58f0d647c5d0515fe4b813503b653e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Feb 17 13:07:01 2023 +0100

    MCA-2660 Fixed formatting

commit dd9b23e59dca71d3396a19810adde966515dff04
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Feb 17 09:14:49 2023 +0100

    MCA-2660 InAppChat setLanguage listener returns applied language now. Added german language. Improved Locale parsing, country code and variant are not ignored anymore. InAppChatFragment language applied after page loaded.

--- a/infobip-mobile-messaging-android-demo/src/chat/res/menu/menu_main.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/menu/menu_main.xml
@@ -128,5 +128,11 @@
             android:enabled="true"
             android:title="@string/japanese"
             app:showAsAction="never" />
+
+        <item
+            android:id="@+id/german"
+            android:enabled="true"
+            android:title="@string/german"
+            app:showAsAction="never" />
     </group>
 </menu>
