Pull request #322: Jdzubak MCA-2635 inappchat customization
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2635-inappchat-customization to master

Squashed commit of the following:

commit 0214f21eb3c0384dd821a8ba39c76205960eea92
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 13 09:24:30 2023 +0100

    MCA-2680 Review fixes

commit b9bd7c13aa3bff5dd4c8e883dfbc1c725c437c12
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 7 15:03:16 2023 +0100

    MCA-2680 Hide keyboard

commit 8aaba235737e29448c79de1d91752b3f39891ebe
Merge: 959c6267 f1816052
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 7 14:58:00 2023 +0100

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-2635-inappchat-customization

    # Conflicts:
    #	infobip-mobile-messaging-android-chat-sdk/src/main/java/org/infobip/mobile/messaging/chat/view/InAppChatFragment.java

commit 959c6267ce47e285ca6bd96d945ca5e1cc21d14b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 7 14:44:37 2023 +0100

    MCA-2680 Clean

commit bfd2445fa08a8ce82b2dcdf5577aae73ce25b7c5
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 7 13:58:09 2023 +0100

    MCA-2680 Multidex enabled in demo app

commit 31f2fd768896137c95bde93666640d9f914cf571
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 7 13:21:33 2023 +0100

    MCA-2680 Multidex dependency added

commit 56ff6a18ea7e0a17a0f35f65f984aa2a18a259ee
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 7 11:11:39 2023 +0100

    MCA-2680 Correct version for desugar_jdk_lib

commit 17e20d6f66eabefd683154068fe9c533412afc6c
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 6 16:25:42 2023 +0100

    MCA-2680 InAppChat attachment preview toolbar customizations

commit e7db5b5f338d604dc173b39838ff23539e0fe266
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Mar 3 20:35:45 2023 +0100

    MCA-2680 InAppChat toolbar customizations

co

--- a/infobip-mobile-messaging-android-demo/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- region Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -13,19 +13,41 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light"/>
+    <!--    endregion-->
 
-    <style name="IB_AppTheme.Chat">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorControlNormal">@android:color/white</item>
-        <item name="titleTextColor">@android:color/white</item>
+    <!-- region Custom InAppChat style. -->
+    <style name="InAppChat"/>
+
+    <style name="InAppChat.Demo.Toolbar" parent="InAppChat">
+        <item name="ibChatNavigationIconTint">@android:color/white</item>
+        <item name="ibChatTitleTextAppearance">@style/InAppChat.Demo.Toolbar.Title.TextAppearance</item>
+        <item name="ibChatTitleTextColor">@android:color/white</item>
+        <item name="ibChatTitleCentered">false</item>
     </style>
 
-    <style name="IB_AppTheme.ChatAttach">
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorControlNormal">@android:color/white</item>
-        <item name="titleTextColor">@android:color/white</item>
+    <style name="InAppChat.Demo.Toolbar.Title.TextAppearance" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textStyle">italic</item>
+        <item name="fontFamily">sans-serif-medium</item>
+    </style>
+
+    <style name="InAppChat.Demo.Toolbar.AttachmentPreview" parent="InAppChat.Demo.Toolbar">
+        <item name="ibChatSubtitleCentered">true</item>
+    </style>
+
+    <style name="InAppChat.Demo.Input" parent="InAppChat">
+        <item name="ibChatInputBackgroundColor">@android:color/white</item>
+    </style>
+
+    <style name="InAppChat.Demo.Chat" parent="InAppChat">
+        <item name="ibChatBackgroundColor">@android:color/white</item>
+    </style>
+    <!--    endregion-->
+
+    <style name="IB_AppTheme.Chat">
+        <item name="ibChatToolbarStyle">@style/InAppChat.Demo.Toolbar</item>
+        <item name="ibChatAttachmentToolbarStyle">@style/InAppChat.Demo.Toolbar.AttachmentPreview</item>
+        <item name="ibChatInputStyle">@style/InAppChat.Demo.Input</item>
+        <item name="ibChatStyle">@style/InAppChat.Demo.Chat</item>
     </style>
 
     <style name="IB_AppTheme.WebView">
