--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat_attach_preview.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_activity_chat_attach_preview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,40 +7,36 @@
     android:orientation="vertical"
     tools:context=".view.InAppChatAttachmentPreviewActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/ib_chat_attach_tb"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/ib_lc_appbar"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:theme="@style/IB_WebViewTheme.PopupOverlay">
+        android:layout_height="wrap_content"
+        android:theme="@style/IB_ChatDefaultTheme.AppBarOverlay">
 
-        <TextView
-            android:id="@+id/ib_chat_attach_tb_title"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/ib_lc_chat_attach_tb"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:paddingStart="40dp"
-            android:paddingLeft="40dp"
-            android:paddingEnd="0dp"
-            android:paddingRight="0dp" />
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/IB_ChatDefaultTheme.PopupOverlay"/>
 
-    </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <WebView
-        android:id="@+id/ib_chat_attach_wv"
-        android:layout_below="@+id/ib_chat_attach_tb"
+        android:id="@+id/ib_lc_chat_attach_wv"
         android:layout_width="match_parent"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/ib_lc_appbar"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ProgressBar
-        android:id="@+id/ib_chat_attach_pb"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/ib_chat_attach_tb"
+        android:id="@+id/ib_lc_chat_attach_pb"
+        android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="70dp"
+        app:layout_constraintTop_toBottomOf="@+id/ib_lc_appbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:visibility="visible" />
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
