--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
@@ -8,20 +8,19 @@
     android:animateLayoutChanges="true"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
     tools:context=".view.InAppChatFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/ib_lc_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/IB_AppTheme.AppBarOverlay">
+        android:theme="@style/IB_ChatDefaultTheme.AppBarOverlay">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/ib_toolbar_chat_fragment"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/ib_lc_chat_tb"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/IB_AppTheme.PopupOverlay" />
+            app:popupTheme="@style/IB_ChatDefaultTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -37,92 +36,25 @@
         android:id="@+id/ib_lc_wv_in_app_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/ib_lc_rl_msg_input_wrapper"
-        android:layout_below="@+id/appBarLayout"
+        android:layout_above="@+id/ib_lc_msg_input"
+        android:layout_below="@+id/ib_lc_appbar"
         android:visibility="invisible" />
 
-    <LinearLayout
-        android:id="@+id/ib_lc_rl_msg_input_wrapper"
+    <org.infobip.mobile.messaging.chat.view.InAppChatInputView
+        android:id="@+id/ib_lc_msg_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:minHeight="40dp"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/ib_lc_iv_input_top_border"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:src="@drawable/light_top_border" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/ib_lc_iv_send_attachment_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignBottom="@id/ib_lc_rl_edit_text_wrapper"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:enabled="false"
-                android:src="@drawable/ib_chat_attachment_btn_icon" />
-
-            <ImageView
-                android:id="@+id/ib_lc_iv_send_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignBottom="@id/ib_lc_rl_edit_text_wrapper"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:enabled="false"
-                android:src="@drawable/ib_chat_send_btn_icon" />
-
-            <RelativeLayout
-                android:id="@+id/ib_lc_rl_edit_text_wrapper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toStartOf="@+id/ib_lc_iv_send_btn"
-                android:layout_toLeftOf="@+id/ib_lc_iv_send_btn"
-                android:layout_toEndOf="@id/ib_lc_iv_send_attachment_btn"
-                android:layout_toRightOf="@id/ib_lc_iv_send_attachment_btn"
-                android:minHeight="30dp"
-                android:orientation="horizontal"
-                android:paddingTop="10dp"
-                app:layout_anchorGravity="center">
-
-                <EditText
-                    android:id="@+id/ib_lc_et_msg_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@null"
-                    android:enabled="false"
-                    android:importantForAutofill="no"
-                    android:inputType="textMultiLine"
-                    android:maxLines="5"
-                    android:minHeight="30dp"
-                    android:scrollbars="vertical"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-        </RelativeLayout>
-    </LinearLayout>
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:minHeight="?attr/actionBarSize"
+        />
 
     <TextView
         android:id="@+id/ib_lc_tv_error_toast"
         android:layout_width="match_parent"
         android:layout_height="@dimen/chat_not_available_tv_height"
-        android:layout_alignBottom="@+id/appBarLayout"
+        android:layout_alignBottom="@+id/ib_lc_appbar"
         android:background="@android:color/darker_gray"
         android:gravity="center_horizontal|center_vertical"
         android:textColor="@android:color/black"
