Pull request #327: Mtokar MCA-2724 rtcui webrtc calls
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-2724-rtcui-webrtc-calls to master

Squashed commit of the following:

commit 40ae3389f60cd1460c746072a3228924fdd5645f
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Mar 24 14:41:41 2023 +0100

    MCA-2752 Review fixes

commit 211865defe0937134d5c4363866cdf8ed3101353
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Mar 21 15:08:06 2023 +0100

    review fixes

commit bc334b6d943c3e5fb300f9f921114ffabfdb2e21
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Mar 21 14:13:10 2023 +0100

    review fixes

commit dea833f64ee29d879f311a3607e7558bf6e5cce2
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Tue Mar 21 11:32:16 2023 +0000

    Applied suggestion

commit 0e5f0f80f5b3f9001f36680f3a130208cc5add32
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Tue Mar 21 11:32:02 2023 +0000

    Applied suggestion

commit 67a7f79dd620589ef09de1d1ff74aaf5ebcec916
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Tue Mar 21 11:31:40 2023 +0000

    Applied suggestion

commit 56d368a77439ec2c476bce785f3f27458139efa7
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Mar 20 15:49:42 2023 +0100

    sync with MCA pr
    rename MM tag to RtcUi

commit c690e8bedc3b63873f0cf801192f2ae964bc8a01
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Mar 15 13:54:25 2023 +0100

    remove blank line
    fix service package name

commit b9a579bb274da86ae6023568e3f5adfbb9ebb163
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Mar 15 13:53:19 2023 +0100

    remove blank line
    fix service package name

commit 66612dee10c47601682a066d2c86a073b66bffc4
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Mar 14 19:04:43 2023 +0100

    rename listener

commit 9f59e80facc5cdb5a20392f32a8f4717706d7f6b
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Mar 14 19:03:30 2023 +0100

    merge master

commit 7d4a

--- a/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
+++ b/infobip-rtc-ui/src/main/res/layout/fragment_in_call.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.infobip.webrtc.sdk.api.video.VideoRenderer
+        <com.infobip.webrtc.sdk.api.model.video.VideoRenderer
             android:id="@+id/remoteVideo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -372,7 +372,7 @@
         app:layout_constraintTop_toBottomOf="@id/weakConnectionAlert"
         tools:visibility="gone" />
 
-    <com.infobip.webrtc.sdk.api.video.VideoRenderer
+    <com.infobip.webrtc.sdk.api.model.video.VideoRenderer
         android:id="@+id/localVideo"
         android:layout_width="0dp"
         android:layout_height="0dp"
